# NLSA

./: LICENSE  README  README.md  _config.yml  startup.m
MATLAB/: README.md  startup.m
Python/: README  README.md  project.vim  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
Python/examples/: Qiskit_Koopman5.ipynb  diffusion_maps_jax.ipynb  diffusion_maps_jax.py  diffusion_maps_numpy.ipynb  fock_space.ipynb  stepanoff.ipynb
Python/examples/fers23/: 1_composition_maps.ipynb  2_madden-julian_oscillation.ipynb
Python/examples/generator_compactification/: torus_rotation.ipynb
Python/examples/l63/: kernel_analog_forecasting_jax.py  koopman_nlsa_jax.py  resolvent_compactification_nlsa_jax.py
Python/examples/lorenz63/: kernel_analog_forecasting_iterative_jax.py  kernel_analog_forecasting_jax.py  koopman_diffusion_regularization_jax.py  koopman_resolvent_compactification_jax.py
Python/examples/math146/: 1_composition_maps.ipynb  composition_maps.ipynb  finite_rank_approximation.ipynb  multiplication_operators.ipynb  quantum_circuits.ipynb
Python/examples/math146/2022_fall/: composition_maps.ipynb  finite_rank_approximation.ipynb  multiplication_operators.ipynb  quantum_circuits.ipynb  quantum_evolution.ipynb
Python/examples/past/: diffusion_maps.ipynb
Python/examples/tensor_network/: torus_rotation.ipynb
Python/examples/torus_rotation/: kernel_analog_forecasting_jax.py  koopman_nlsa_jax.py  resolvent_compactification_nlsa_jax.py  resolvent_compactification_physics_informed_jax.py
Python/perf/: jax_kernels.py  jax_kernels_par.py  jax_kernels_shard.py  jax_qeval.py  jax_stepanoff.py  numpy_kernels.py
Python/scratch/: test_guvectorize.py  test_jax_diffrax.py  test_jax_fourier_t1.py  test_jax_fourier_t2.py  test_jax_vector_algebra.py  test_numba_kernels.py  test_sec.py
Python/src/nlsa/: __init__.py  abstract_algebra.py  abstract_algebra2.py  dynamics.py  finite_differences.py  fourier_s1.py  fourier_t2.py  function_algebra.py  function_algebra2.py  io_actions.py  kernels.py  koopman.py  matrix_algebra.py  operator_algebra.py  qmda.py  quantum.py  quantum_circuits.py  rkhs.py  scalar_algebra2.py  scalars.py  typing.py  utils.py  vector_algebra.py  vector_algebra_pairwise.py
Python/src/nlsa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python/src/nlsa/jax/: circle.py  delays.py  distance.py  dynamics.py  euclidean.py  fourier_t1.py  fourier_t2.py  io_actions.py  matrix_algebra.py  scalar_algebra.py  scalars.py  sharding.py  special.py  stats.py  torus.py  typing.py  utils.py  vector_algebra.py
Python/src/nlsa/jax/dynamics/: __init__.py  _dynamics.py
Python/src/nlsa/jax/kernels/: __init__.py  _kernels.py
Python/src/nlsa/jax/koopman/: __init__.py  _koopman.py
Python/src/nlsa/jaxopt/: __init__.py  linear_solve.py
Python/src/nlsa/numba/: vector_algebra.py
Python/src/nlsa/numpy/: dynamics.py  scalar_algebra.py  vector_algebra.py
Python/src/nlsa_models/: cesm2.py  core.py  estcp.py  lorenz63.py
Python/src/obsolete/tests/: test_rkhs.py
Python/tests/: test_dynamics.py  test_fourier.py  test_function_algebra.py  test_function_algebra2.py  test_jax_dynamics.py  test_jax_matrix_algebra.py  test_jax_vector_algebra.py  test_kernels.py  test_matrix_algebra.py  test_numpy_vector_algebra.py  test_qmda.py  test_quantum_circuits.py  test_rkhs.py  test_scalar_algebra2.py  test_vector_algebra.py
examples/ccsm/: ccsmImport.m  ccsmMovieProj_ssa.m  ccsmNLSAModel.m  ccsmNLSAModel_den.m  ccsmNLSAModel_ssa.m  ccsmPlotPhi_ssa.m  runNLSA.m  runNLSA_den.m  runNLSA_ssa.m
examples/circle/: circleData.m  circleNLSAModel.m  demoKoopman.m  demoKoopman_data.m  demoKoopman_nlsaModel.m  runNLSA.m
examples/claus/: clausFigPhi.m  clausFigVT.m  clausKoopmanEigenfunctions.m  clausMovieU_belt15.m  clausNLSAModel.m  clausNLSAModel_den.m  clausNLSAModel_den.m2  clausNLSAModel_koopman.m  diff2Koop.m  runNLSA.m  runNLSA_den.m
examples/climate/: ccsm4CtrlData.m  ccsm4CtrlPrecip.m  ccsm4CtrlUVSurf.m  ccsm4Data.m  ccsm4NLSAModel.m  climateAnalogForecast.m  climateAnalogForecast_andy.m  climateData.m  climateKoopmanEigenfunctions.m  climateNLSAModel.m  climateNLSAModel_base.m  climateNLSAModel_den.m  climateNLSAModel_den_ose.m  climateNLSAModel_ose.m  climateNLSAModel_sav2.m  climateQMDA.m  computeLifecyclePhases.m  computeLifecyclePhasesWeighted.m  demoEnsoLifecycle.m  demoEnsoLifecycle_data.m  ensoLifecycle.m  ensoLifecycle_data.m  ensoLifecycle_nlsaModel.m  ensoLifecycle_paperFigs.m  ensoLifecycle_symmetricOperator.m  ensoQMDA.m  ensoQMDA_data.m  ensoQMDA_nlsaModel.m  ensoQMDA_test_data.m  hadisstData.m  importData.m  importData_ccsm4Ctrl.m  importData_cmap.m  importData_ersst.m  importData_ersstV4.m  importData_godas.m  importData_gpcp.m  importData_ncep.m  importData_noaa.m  noaaData.m  (+9 more)
examples/enso_prices/: data2.xls  ensoAnalogForecast.m  ensoData.m  ensoNLSAModel_den_ose.m  pc.m  runNLSA_den_ose.m
examples/enso_qmda/: ensoQMDA.m  ensoQMDA_nlsaModel.m  ensoQMDA_perf.txt  importData.m
examples/geomag/: geomagData.m  geomagNLSAModel_den.m  runNLSA_den.m
examples/ice_floes/: floeAnalogForecast.m  floeData.m  floeData_vsa.m  floeData_vsa_channel.m  floeData_vsa_quad_gyre.m  floeNLSAModel_den_ose.m  floeVSAModel_den_ose.m  movieDensity.m  movieEigenfunctions.m  movieEigenfunctions_c.m  movieEigenfunctions_cuvocn.m  runNLSA_den_ose.m  runVSA_den_ose.m
examples/ks_spacetime/: ksData.m  ksNLSAModel_den.m  ksfm2real.m  ksfmstp.m  nakladka2.m  runNLSA_den.m
examples/l63/: demoKAF.m  demoKAF_data.m  demoKAF_nlsaMOdel.m  demoKAF_nlsaModel.m  demoKAF_test_data.m  demoKoopmanForecastRKHS.m  demoKoopmanForecastRKHS_data.m  demoKoopmanForecastRKHS_nlsaModel.m  demoKoopmanForecastRKHS_test_data.m  demoKoopmanRKHS.m  demoKoopmanRKHS_data.m  demoKoopmanRKHS_nlsaModel.m  demoKoopmanRKHS_test_data.m  demoNLSA.m  demoNLSA_data.m  demoNLSA_figsRMS.m  demoNLSA_nlsaModel.m  l63.m  l63Data.m  l63KoopmanEigenfunctions.m  l63NLSAModel.m  l63NLSAModel_den.m  l63NLSAModel_den_ose.m  l63NLSAModel_ose.m  l63QuantumForecast.m  runNLSA.m  runNLSA_den.m  runNLSA_den_ose.m  (+1 more)
(+1535 files in other folders)
