[metadata]
name = nlsa
description = Data-driven algorithms for dynamical systems
author = Dimitris Giannakis
license = BSD-3
license_file = ../LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python 3 :: Only
    Programming Language :: Python 3.10

[options]
package_dir =
    =src
packages = 
    nlsa
install_requires = 
    anyio>=3.6.1
    appnope>=0.1.3
    argon2-cffi>=21.3.0
    argon2-cffi-bindings>=21.2.0
    astor>=0.8.1
    asttokens>=2.0.8
    attrs>=22.1.0
    Babel>=2.10.3
    backcall>=0.2.0
    beautifulsoup4>=4.11.1
    bleach>=5.0.1
    certifi>=2022.9.14
    cffi>=1.15.1
    charset-normalizer>=2.1.1
    coverage>=6.4.4
    cycler>=0.11.0
    debugpy>=1.6.3
    decorator>=5.1.1
    defusedxml>=0.7.1
    entrypoints>=0.4
    executing>=1.0.0
    fastjsonschema>=2.16.1
    flake8>=5.0.4
    fonttools>=4.37.1
    idna>=3.4
    iniconfig>=1.1.1
    ipykernel>=6.15.3
    ipympl>=0.9.2
    ipython>=8.5.0
    ipython-genutils>=0.2.0
    ipywidgets>=8.0.2
    jedi>=0.18.1
    Jinja2>=3.1.2
    json5>=0.9.10
    jsonschema>=4.16.0
    jupyter-core>=4.11.1
    jupyter-server>=1.18.1
    jupyter_client>=7.3.5
    jupyterlab>=3.4.7
    jupyterlab-pygments>=0.2.2
    jupyterlab-spellchecker>=0.7.2
    jupyterlab-vim>=0.15.1
    jupyterlab-widgets>=3.0.3
    jupyterlab_server>=2.15.1
    kiwisolver>=1.4.4
    lxml>=4.9.1
    MarkupSafe>=2.1.1
    matplotlib>=3.5.3
    matplotlib-inline>=0.1.6
    mccabe>=0.7.0
    mistune>=2.0.4
    more-itertools>=8.14.0
    mypy>=0.971
    mypy-extensions>=0.4.3
    nb-mypy>=1.0.3
    nbclassic>=0.4.3
    nbclient>=0.6.8
    nbconvert>=7.0.0
    nbformat>=5.5.0
    nest-asyncio>=1.5.5
    nodeenv>=1.7.0
    nodejs>=0.1.1
    notebook>=6.4.12
    notebook-shim>=0.1.0
    nptyping>=2.3.1
    numpy>=1.23.3
    optional-django>=0.1.0
    packaging>=21.3
    pandocfilters>=1.5.0
    parso>=0.8.3
    pexpect>=4.8.0
    pickleshare>=0.7.5
    Pillow>=9.2.0
    pluggy>=1.0.0
    prometheus-client>=0.14.1
    prompt-toolkit>=3.0.31
    psutil>=5.9.2
    ptyprocess>=0.7.0
    pure-eval>=0.2.2
    py>=1.11.0
    pycodestyle>=2.9.1
    pycparser>=2.21
    pyflakes>=2.5.0
    Pygments>=2.13.0
    pyparsing>=3.0.9
    pyrsistent>=0.18.1
    pytest>=7.1.3
    pytest-cov>=3.0.0
    python-dateutil>=2.8.2
    pytz>=2022.2.1
    pyzmq>=23.2.1
    requests>=2.28.1
    scipy>=1.9.1
    Send2Trash>=1.8.0
    six>=1.16.0
    sniffio>=1.3.0
    soupsieve>=2.3.2.post1
    stack-data>=0.5.0
    terminado>=0.15.0
    tinycss2>=1.1.1
    tomli>=2.0.1
    tornado>=6.2
    traitlets>=5.4.0
    typing_extensions>=4.3.0
    urllib3>=1.26.12
    wcwidth>=0.2.5
    webencodings>=0.5.1
    websocket-client>=1.4.1
    widgetsnbextension>=4.0.3

[options.packages.find]
where=src

[options.extras_require]
testing =
    flake8>=5.0.4
    pytest>=7.1.3
    pyflakes>=2.5.0

[options.package_data]
nlsa = py.typed

[flake8]
max-line-length = 160
